# OPUS_DEC_TEST

./: .gitignore  CMakeLists.txt  README
include/: avccelt_api.h  config.h
src/: CMakeLists.txt  CountDownLatch.hpp  opus_celt_dec.cpp
test/: 1.avc
