#xshuo c1 avc(opus dec)
cmake_minimum_required(VERSION 3.2)

MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})

#SET(PROJECT_BINARY_DIR build)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#MESSAGE(STATUS "Change BINARY dir to " ${PROJECT_BINARY_DIR})


INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
    )

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/lib
    )

ADD_DEFINITIONS(-DChanelstereo)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(C1_OPUS_DEC ${SRC_LIST})

TARGET_LINK_LIBRARIES(C1_OPUS_DEC libavcodecstereo.a)

